// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericListElement should match snapshot (selected) 1`] = `
.css-0,
[data-css-0] {
  width: 100%;
  height: 10%;
  color: red;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #c8daea;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.css-0:hover,
[data-css-0]:hover {
  background-color: #c8daea;
  cursor: pointer;
}

<div>
  <div
    class="listElement selectedListElement"
    data-css-0=""
  >
    <div>
      Element Content
    </div>
  </div>
</div>
`;

exports[`GenericListElement should match snapshot 1`] = `
.css-0,
[data-css-0] {
  width: 100%;
  height: 10%;
  color: red;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.css-0:hover,
[data-css-0]:hover {
  background-color: #c8daea;
  cursor: pointer;
}

<div>
  <div
    class="listElement"
    data-css-0=""
  >
    <div>
      Element Content
    </div>
  </div>
</div>
`;
